Fix: DD/MM/YY dates, history graph shows more than 7 days, add Dockerfile and docker-compose

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,16 @@ _ide_helper.php
 .idea
 .config
 reports/
+backup-config/
+config/
+speedtest-fixed-backup.tar
+*.old
+build.log
+docker-config/
+HistoryGraph.js
+TableRow.js
+HomepageDataController.php
+Dockerfile.txt
+.dockerignore-old
+gitignore
+resources/resources/
